Added Vercel speed insights, added roles and Floating UI url

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "cSpell.words": [
+        "apisused",
         "bajan",
+        "basicinfocard",
+        "exchangerate",
         "Factbook",
+        "publicholiday",
         "soca",
         "Upsplash",
         "upvotes"
