--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
+    "@vercel/speed-insights": "^1.2.0",
     "gh-pages": "^6.3.0",
     "next": "15.5.0",
     "react": "19.1.0",
